--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="validatePassword()"></button>
+    <button onclick="validatePassword()">Validate Password</button>
 </body>
 </html>
