--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
-    <title>Document</title>
+    
+    <title>Day-7</title>
 </head>
 <body>
+
+
+<!-- <script src="js/script.js"></script> -->
+<script src="js/script.js" async type="module"></script>  
 </body>
 </html>
