Updates to Random Cat Facts

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Day-7</title>
 </head>
 <body>
-
+    <h1>Random Cat Facts</h1>
 
 <!-- <script src="js/script.js"></script> -->
-<script src="js/script.js" async type="module"></script>  
+<script src="js/script.js" async type="module"></script>
 </body>
 </html>
