--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     
-    <title>Day-7</title>
+    <title>Day-7 (API takehome)</title>
 </head>
 <body>
-
-
+<h1>API Take Home</h1>
+<button onclick="">Data from API</button>
 <!-- <script src="js/script.js"></script> -->
 <script src="js/script.js" async type="module"></script>  
 </body>
