--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     
     <title>Day-7 (API takehome)</title>
 </head>
 <body>
-<h1>API Take Home</h1>
-<button onclick="">Data from API</button>
-<!-- <script src="js/script.js"></script> -->
-<script src="js/script.js" async type="module"></script>  
+<h1>API Take Home (Pokemon API)</h1>
+
+<button onclick="getPokemon()">Get a Pokemon</button>
+<script src="js/script.js"></script>
 </body>
 </html>
