--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     
     <title>Day-7</title>
 </head>
 <body>
-    <h1>Random Cat Facts</h1>
+    <h1>Day-7 Class Notes</h1>
 
-<!-- <script src="js/script.js"></script> -->
-<script src="js/script.js" async type="module"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
