--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
-    <title>Document</title>
+    
+    <title>DOM-Take Home</title>
 </head>
+
 <body>
+<h2>This is an H2 element</h2>
+<button onclick="changeH2()">Click to change the text</button>
+
+<script src="js/script.js"></script>
 </body>
 </html>
